[M70] Paint timing: revert back to swap-time

This CL is a minimal change to use swap time instead of presentation
time in PageLoad.PaintTiming.NavigationToFirstContentfulPaint. This is a
tentative fix for the unexpected regressions in the metric. The change
is minimal since it may require a merge to Stable. A followup change
will record the presentation timestamp, or the delta with the swap
timestamp, in a separate metric.

Bug: 870707
Change-Id: I1b48968d010bbd6120a6fbac59e26dc789d23394
Reviewed-on: https://chromium-review.googlesource.com/1244371
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Nicolás Peña Moreno <npm@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#594331}(cherry picked from commit c18ade0f2a5110295ea19ba8917347a8b653cf39 [formerly f962a47e219a605eb9648251df3d76471fe06bd9])
Reviewed-on: https://chromium-review.googlesource.com/c/1262035
Reviewed-by: Nicolás Peña Moreno <npm@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#850}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 012527ecf5ced6845fbea843375f441a517b502a