content/renderer/gpu/layer_tree_view.cc
@@ -10,6 +10,7 @@
 
 #include "base/auto_reset.h"
 #include "base/callback.h"
+#include "base/feature_list.h"
 #include "base/location.h"
 #include "base/single_thread_task_runner.h"
 #include "base/task/post_task.h"
@@ -57,6 +58,12 @@ namespace {
 
 using ReportTimeCallback = blink::WebLayerTreeView::ReportTimeCallback;
 
+// Enables using presentation times instead of swap times in swap promises.
+// Currently, these promises are only used by Paint Timing, but they will be
+// used by other APIs such as Event Timing.
+const base::Feature kUsePresentationTimeInSwapPromise = {
+    "UsePresentationTimeInSwapPromise", base::FEATURE_DISABLED_BY_DEFAULT};
+
 class ReportTimeSwapPromise : public cc::SwapPromise {
  public:
   ReportTimeSwapPromise(ReportTimeCallback callback,
@@ -91,6 +98,11 @@ ReportTimeSwapPromise::~ReportTimeSwapPromise() {}
 void ReportTimeSwapPromise::WillSwap(viz::CompositorFrameMetadata* metadata) {
   DCHECK_GT(metadata->frame_token, 0u);
   metadata->request_presentation_feedback = true;
+  if (!base::FeatureList::IsEnabled(kUsePresentationTimeInSwapPromise))
+    return;
+
+  // If using presentation timestamp, post task here calling
+  // LayerTreeView::AddPresentationCallback.
   auto* task_runner = task_runner_.get();
   task_runner->PostTask(
       FROM_HERE,
@@ -102,8 +114,14 @@ void ReportTimeSwapPromise::WillSwap(viz::CompositorFrameMetadata* metadata) {
 }
 
 void ReportTimeSwapPromise::DidSwap() {
-  // If swap did happen, then the paint-time will be reported when the
-  // presentation feedback is received.
+  if (base::FeatureList::IsEnabled(kUsePresentationTimeInSwapPromise))
+    return;
+
+  // If using swap timestamp, the swap promise should return the current time.
+  task_runner_->PostTask(
+      FROM_HERE, base::BindOnce(std::move(callback_),
+                                blink::WebLayerTreeView::SwapResult::kDidSwap,
+                                base::TimeTicks::Now()));
 }
 
 void ReportTimeSwapPromise::DidNotSwap(
@@ -123,6 +141,8 @@ void ReportTimeSwapPromise::DidNotSwap(
       result = blink::WebLayerTreeView::SwapResult::kDidNotSwapActivationFails;
       break;
   }
+  // During a failed swap, return the current time regardless of whether we're
+  // using presentation or swap timestamps.
   task_runner_->PostTask(FROM_HERE, base::BindOnce(std::move(callback_), result,
                                                    base::TimeTicks::Now()));
 }
